--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,6 @@ jobs:
         with:
           MY_NAME: "Mona"
 
+git fetch origin
+git checkout -b first-action origin/first-action
+git merge master
