--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,7 @@ jobs:
 git fetch origin
 git checkout -b first-action origin/first-action
 git merge master
+
+git checkout master
+git merge --no-ff first-action
+git push origin master
